# lyric-finder-server

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CPU.Dockerfile  CUDA.Dockerfile  Dockerfile
include/: ISearchEngine.hpp  search_engine_gpu.hpp  song.hpp
include/controller/: controller.hpp  search_controller.hpp  static_controller.hpp
include/dto/: lyric.hpp  query.hpp  query_result.hpp  song.hpp  song_list.hpp
include/engine/: ISearchEngine.hpp  cache.hpp  query_kernel.h  search_engine_cpu.hpp  search_engine_gpu.hpp  song.hpp
include/static_files_manager/: static_files_manager.hpp
src/: ISearchEngine.cpp  app.cpp  app_component.hpp  query_kernel.cu  search_engine_cpu.cpp  search_engine_gpu.cpp  server.cpp  song.cpp
src/engine/: ISearchEngine.cpp  cache.cpp  query_kernel.cu  search_engine_cpu.cpp  search_engine_gpu.cpp  song.cpp
src/static_files_manager/: static_files_manager.cpp
